# meditab

./: .gitignore  HANDOFF.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: annotation_schema.md  data_governance.md  eval_plan.md  scope.md
learning/: project_learning.md
scripts/: day02_smoke_test.py  day03_generate_synthetic.py  day04_validate_golds.py  day05_zero_shot_extract.py  day06_ingest.py  day07_mcp_smoke.py  day08_mcp_extract.py  day09_batch_extract.py  evaluate.py  extract_batch.py  extract_one.py  generate_synthetic.py  ingest.py  smoke_mcp.py  sweep.py  validate_golds.py
src/meditab/: __init__.py  eval.py  judge.py  llm_client.py  mcp_server.py  mongo.py  prompts.py  schema.py
thesis/literature/: README.md  notes.md
